src/test/deca/syntax/invalid/declClass-withoutBody.synt
declClass-withoutBody.deca:1: